# pckit

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
examples/: cache_custom.py  custom_iterator.py  iterator_tqdm.py  logging_mpi.py  mpi_solver.py  simple_and_multiproc_solver.py  solver_mpi.py  solver_simple_and_multiproc.py  tasks_new.py  tasks_old.py  tqdm_iterator.py  tqdm_support.py
examples/comsol/: acoustics.ipynb
pckit/: __init__.py  _mpi_check.py  _typevars.py  _utils.py  cache.py  logging_utils.py  models.py  solvers.py  task.py  utils.py  workers.py
pckit/comsol/: __init__.py  model.py  worker.py
tests/: _test_workers.py  conftest.py  mpi_test.py  test_fixtures.py  test_solvers.py  test_workers.py
tests/mpi_tests/: errors_test.py  test_mpi.py
