[tool.poetry]
name = "pckit"
version = "0.2.1"
description = "A simple package for parallel computing with Python"
authors = ["djiboshin"]
readme = "README.md"
homepage = "https://github.com/djiboshin/pckit"
repository = "https://github.com/djiboshin/pckit"
license = "MIT"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
mpi4py = "^3.1.3"
MPh = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.8"
pytest-cov = "^3.0.0"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
